2014-05-29  Jean-Louis Martineau <martineau@zmanda.com>
	* installcheck/Amanda_Rest_Configs.pl,
	  installcheck/Amanda_Rest_Dles.pl,
	  installcheck/Amanda_Rest_Labels.pl,
	  installcheck/Amanda_Rest_Version.pl,
	  installcheck/Installcheck/Rest.pm: Use port 5001.
	* installcheck/amadmin.pl: Fix sort
	* perl/Amanda/Disklist.swg: Fix sort.

2014-05-29  Jean-Louis Martineau <martineau@zmanda.com>
	* installcheck/Installcheck/Rest.pm: Retrun error if can't fork
	  starman.
	* installcheck/Amanda_Rest_Configs.pl,
	  installcheck/Amanda_Rest_Dles.pl,
	  installcheck/Amanda_Rest_Labels.pl,
	  installcheck/Amanda_Rest_Version.pl: SKIP test if forking starman
	  failed.

2014-05-29  Jean-Louis Martineau <martineau@zmanda.com>
	* installcheck/Installcheck/Rest.pm: Fix to send starman stderr to the
	  debug file.

2014-05-29  Jean-Louis Martineau <martineau@zmanda.com>
	* installcheck/Amanda_Rest_Configs.pl: Fix.

2014-05-28  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Changer.pm: Sort to get repeatable result.
	* perl/Amanda/Disklist.swg: Sort to get repeatable result.
	* perl/Amanda/Report.pm: Sort to get repeatable result.
	* perl/Amanda/Report/human.pm: Sort to get repeatable result.
	* installcheck/amadmin.pl: Fix for new order.
	* installcheck/catalogs/filesystemstaped.cat: Fix for new order.

2014-05-28  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/amglue/integers.swg: Fix compiler warnings.
	* installcheck/Makefile.am: Add Installcheck/Rest.pm

2014-05-28  Jean-Louis Martineau <martineau@zmanda.com>
	* installcheck/Amanda_Rest_Configs.pl, installcheck/Amanda_Rest_Dles.pl,
	  installcheck/Amanda_Rest_Labels.pl,
	  installcheck/Amanda_Rest_Version.pl: Skip test if WWW::Curl::Easy is
	  not available.

2014-05-27  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Rest/Runs.pm: Remove Data::Structure::Util dependencies.

2014-05-27  Jean-Louis Martineau <martineau@zmanda.com>